# Homework

./: CMakeLists.txt  Constants.h  Fixed.cpp  Fixed.h  Graphs.cpp  Graphs.h  WavData.h  WavHeader.h  main.cpp
Outputs/: chan_0.txt
